refactored and added key, api and device operations
