# server/restapi/operations/device/list_urlbuilder.go
@@ -1,6 +1,6 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package operations
+package device
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the generate command
@@ -9,23 +9,17 @@ import (
 	"errors"
 	"net/url"
 	golangswaggerpaths "path"
-	"strings"
 )
 
-// PressKeyURL generates an URL for the press key operation
-type PressKeyURL struct {
-	KeyID       string
-	SpeakerName string
-
+// ListURL generates an URL for the list operation
+type ListURL struct {
 	_basePath string
-	// avoid unkeyed usage
-	_ struct{}
 }
 
 // WithBasePath sets the base path for this url builder, only required when it's different from the
 // base path specified in the swagger spec.
 // When the value of the base path is an empty string
-func (o *PressKeyURL) WithBasePath(bp string) *PressKeyURL {
+func (o *ListURL) WithBasePath(bp string) *ListURL {
 	o.SetBasePath(bp)
 	return o
 }
@@ -33,29 +27,15 @@ func (o *PressKeyURL) WithBasePath(bp string) *PressKeyURL {
 // SetBasePath sets the base path for this url builder, only required when it's different from the
 // base path specified in the swagger spec.
 // When the value of the base path is an empty string
-func (o *PressKeyURL) SetBasePath(bp string) {
+func (o *ListURL) SetBasePath(bp string) {
 	o._basePath = bp
 }
 
 // Build a url path and query string
-func (o *PressKeyURL) Build() (*url.URL, error) {
+func (o *ListURL) Build() (*url.URL, error) {
 	var _result url.URL
 
-	var _path = "/{speakerName}/key/{keyId}"
-
-	keyID := o.KeyID
-	if keyID != "" {
-		_path = strings.Replace(_path, "{keyId}", keyID, -1)
-	} else {
-		return nil, errors.New("keyId is required on PressKeyURL")
-	}
-
-	speakerName := o.SpeakerName
-	if speakerName != "" {
-		_path = strings.Replace(_path, "{speakerName}", speakerName, -1)
-	} else {
-		return nil, errors.New("speakerName is required on PressKeyURL")
-	}
+	var _path = "/device/list"
 
 	_basePath := o._basePath
 	_result.Path = golangswaggerpaths.Join(_basePath, _path)
@@ -64,7 +44,7 @@ func (o *PressKeyURL) Build() (*url.URL, error) {
 }
 
 // Must is a helper function to panic when the url builder returns an error
-func (o *PressKeyURL) Must(u *url.URL, err error) *url.URL {
+func (o *ListURL) Must(u *url.URL, err error) *url.URL {
 	if err != nil {
 		panic(err)
 	}
@@ -75,17 +55,17 @@ func (o *PressKeyURL) Must(u *url.URL, err error) *url.URL {
 }
 
 // String returns the string representation of the path with query string
-func (o *PressKeyURL) String() string {
+func (o *ListURL) String() string {
 	return o.Must(o.Build()).String()
 }
 
 // BuildFull builds a full url with scheme, host, path and query string
-func (o *PressKeyURL) BuildFull(scheme, host string) (*url.URL, error) {
+func (o *ListURL) BuildFull(scheme, host string) (*url.URL, error) {
 	if scheme == "" {
-		return nil, errors.New("scheme is required for a full url on PressKeyURL")
+		return nil, errors.New("scheme is required for a full url on ListURL")
 	}
 	if host == "" {
-		return nil, errors.New("host is required for a full url on PressKeyURL")
+		return nil, errors.New("host is required for a full url on ListURL")
 	}
 
 	base, err := o.Build()
@@ -99,6 +79,6 @@ func (o *PressKeyURL) BuildFull(scheme, host string) (*url.URL, error) {
 }
 
 // StringFull returns the string representation of a complete url
-func (o *PressKeyURL) StringFull(scheme, host string) string {
+func (o *ListURL) StringFull(scheme, host string) string {
 	return o.Must(o.BuildFull(scheme, host)).String()
 }
