# server/restapi/operations/key/play_pause.go
@@ -1,6 +1,6 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package operations
+package key
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the generate command
@@ -29,9 +29,9 @@ func NewPlayPause(ctx *middleware.Context, handler PlayPauseHandler) *PlayPause 
 	return &PlayPause{Context: ctx, Handler: handler}
 }
 
-/*PlayPause swagger:route GET /{speakerName}/playPause playPause
+/*PlayPause swagger:route GET /{speakerName}/playPause key playPause
 
-toggles between PLAYING and PAUSE state
+This method will play if the device was paused or pause when it was playing.
 
 */
 type PlayPause struct {
