# server/restapi/operations/key/press_key.go
@@ -1,6 +1,6 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package operations
+package key
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the generate command
@@ -29,7 +29,7 @@ func NewPressKey(ctx *middleware.Context, handler PressKeyHandler) *PressKey {
 	return &PressKey{Context: ctx, Handler: handler}
 }
 
-/*PressKey swagger:route GET /{speakerName}/key/{keyId} pressKey
+/*PressKey swagger:route GET /{speakerName}/key/{keyId} key pressKey
 
 Presses and releases a key on selected deviceId
 
