# server/swagger/swagger.yml
@@ -10,14 +10,19 @@ info:
 
     The server discovers automatically all Soundtouch devices present in the LAN.
     It's intend is to ease the communication with Boses Soundtouch system.
-
+consumes:
+- application/berlin.vassiliou-pohl.soundtouch-golang.v1+json
+produces:
+- application/berlin.vassiliou-pohl.soundtouch-golang.v1+json
 paths:
   /{speakerName}/key/{keyId}:
     get:
+      tags:
+        - key
       operationId: pressKey
       description: Presses and releases a key on selected deviceId 
       produces:
-        - text/plain
+        - application/berlin.vassiliou-pohl.soundtouch-golang.v1+json
       parameters:
         - name: speakerName
           in: path
@@ -37,18 +42,23 @@ paths:
           "BOOKMARK",
           "THUMBS_UP","THUMBS_DOWN"]
       responses:
-        200:
+        204:
           description: empty on success
           schema:
               type: string
               description: empty on success
-
+        default:
+          description: generic error response
+          schema:
+            $ref: "#/definitions/error"
   /{speakerName}/playPause:
     get:
+      tags:
+        - key
       operationId: playPause
-      description: toggles between PLAYING and PAUSE state
+      description: This method will play if the device was paused or pause when it was playing.
       produces:
-        - text/plain
+        - application/berlin.vassiliou-pohl.soundtouch-golang.v1+json
       parameters:
         - name: speakerName
           in: path
@@ -56,8 +66,185 @@ paths:
           type: string
  
       responses:
-        200:
+        204:
           description: empty on success
           schema:
               type: string
               description: empty on success
+        default:
+          description: generic error response
+          schema:
+            $ref: "#/definitions/error"
+  /{speakerName}/play:
+    get:
+      tags:
+        - key
+      operationId: play
+      description: starts playing
+      produces:
+        - application/berlin.vassiliou-pohl.soundtouch-golang.v1+json
+      parameters:
+        - name: speakerName
+          in: path
+          required: true
+          type: string
+ 
+      responses:
+        204:
+          description: empty on success
+          schema:
+              type: string
+              description: empty on success
+        default:
+          description: generic error response
+          schema:
+            $ref: "#/definitions/error"
+  /{speakerName}/powerOn:
+    get:
+      tags:
+        - key
+      operationId: powerOn
+      description: powers on a device
+      parameters:
+        - name: speakerName
+          in: path
+          required: true
+          type: string
+      responses:
+        200:
+          description: The returned status will be true if the SoundTouch is turned on. The returned 
+            status will be false if the SoundTouch was already turned on.
+          schema:
+            $ref: "#/definitions/bStatus"
+        default:
+          description: generic error response
+          schema:
+            $ref: "#/definitions/error"
+  /{speakerName}/powerOff:
+    get:
+      tags:
+        - key
+      operationId: powerOff
+      description: powers off a device
+      produces:
+        - application/berlin.vassiliou-pohl.soundtouch-golang.v1+json
+      parameters:
+        - name: speakerName
+          in: path
+          required: true
+          type: string
+      responses:
+        200:
+          description: The returned status will be true if the SoundTouch is turned off. The returned 
+            status will be false if the SoundTouch was already turned off.
+          schema:
+            $ref: "#/definitions/bStatus"
+        default:
+          description: generic error response
+          schema:
+            $ref: "#/definitions/error"
+  /device/list:
+    get:
+      tags:
+        - device
+      operationId: list
+      description: This url will return a JSON object with the found soundtouch devices on your network. 
+        When unplugging one of your soundtouches, the device will not be
+        in the list when making a new requests. Even the soundtouches that
+        are powered off are returned. Per soundtouch, only the basic information 
+        is displayed.
+      produces:
+        - application/berlin.vassiliou-pohl.soundtouch-golang.v1+json
+      responses:
+        200:
+          description: a JSON object with the found soundtouch devices on your network.
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/device" 
+        default:
+          description: generic error response
+          schema:
+            $ref: "#/definitions/error"    
+  /device/listAdvanced:
+    get:
+      tags: 
+        - device
+      operationId: listAdvanced
+      description:
+        This url will return a JSON object with the found soundtouch devices on your network. When unplugging one of your soundtouches, the device will not be in the list when making a new requests. Even the soundtouches that are powered off are returned. This advanced view will display all information known about the soundtouch.           
+      produces:
+        - application/berlin.vassiliou-pohl.soundtouch-golang.v1+json
+        
+      responses:
+        200:
+          description: a JSON object with the found soundtouch devices on your network. 
+          schema:
+            $ref: "#/definitions/bObject" 
+        default:
+          description: generic error response
+          schema:
+            $ref: "#/definitions/error"
+  /api/keys-list:
+    get:
+      tags:
+          - API
+      operationId: keysList
+      description: 
+        This method will get all possible keys. These keys can be used in the '/{deviceName}/key/{key}' to replace the {key} placeholder.
+      produces:
+        - application/berlin.vassiliou-pohl.soundtouch-golang.v1+json
+      responses:
+        200:
+          description: a JSON object with all key literals. 
+          schema:
+              $ref: "#/definitions/keys"
+        default:
+          description: generic error response
+          schema:
+            $ref: "#/definitions/error"
+definitions:
+  bObject:
+    type: object
+  bStatus:
+    type: object
+    required:
+      - status
+    properties:
+      status:
+        type: boolean
+        format: int64
+  device:
+    type: object
+    properties:
+      name:
+        type: string
+        example: "Bathroom"
+
+      addresses:
+        type: array
+        items: 
+            type: string
+            example: "10.0.0.7"
+  keys:
+    type: array
+    items: 
+      type: string
+      enum: ["PLAY", "PAUSE", "STOP", "PREV_TRACK","NEXT_TRACK",
+          "POWER", "MUTE","VOLUME_UP","VOLUME_DOWN",
+          "PRESET_1", "PRESET_2", "PRESET_3", "PRESET_4", "PRESET_5", "PRESET_6", "AUX_INPUT",
+          "SHUFFLE_OFF", "SHUFFLE_ON",
+          "REPEAT_OFF","REPEAT_ONE", "REPEAT_ALL",
+          "PLAY_PAUSE", "ADD_FAVORITE", "REMOVE_FAVORITE",
+          "BOOKMARK",
+          "THUMBS_UP","THUMBS_DOWN"]
+  error:
+    type: object
+    required:
+      - message
+    properties:
+      code:
+        type: integer
+        format: int64
+      message:
+        type: string
